--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -12,17 +12,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
+        android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:gravity="center"
         app:cardCornerRadius="4dp"
         app:cardElevation="8dp">
-
-        <TextView
-            android:id="@+id/card_view_text"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="default" />
+            android:orientation="vertical">
+            <ImageView
+                android:id= "@+id/card_view_image"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="3"
+                android:contentDescription="@string/card_view_image_des"
+                />
+
+            <TextView
+                android:id="@+id/card_view_text"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:textSize="14sp"
+                android:text="@string/text_defalut" />
+        </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 
